--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Consultoria Estratégica em Comunicação Interna</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-<meta charset="UTF-8">
+    <link rel="icon" href="favicon.ico">
 <meta name="description" content="Consultoria Estratégica em Comunicação Interna. Transformamos a comunicação organizacional em vantagem competitiva.">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
